# fastapi-oidc-auth

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  realm-export.json
.github/: dependabot.yml
.github/workflows/: python-tests.yml
fastapi_oidc_auth/: auth.py  exceptions.py
src/fastapi_oidc_auth/: auth.py
tests/: app.py  conftest.py  test.py  test_app.py  test_auth.py  test_exceptions.py
