[tool.poetry]
name = "fastapi-oidc-auth"
version = "0.1.0"
description = "OIDC auth in fastapi using a decorator."
authors = ["Matthias Osswald <m@osswald.li>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/busykoala/fastapi-oidc-auth"
keywords = ["fastapi", "oidc", "authentication"]

[tool.poetry.dependencies]
python = ">= 3.9, < 4.0"
fastapi = "^0.109.2"
PyJWT = {extras = ["crypto"], version = "^2.8"}
requests = "^2.32"
uvicorn = "^0.27"

[tool.poetry.dev-dependencies]
flake9 = "*"
isort = "*"
black = "*"
bandit = "*"

[tool.black]
line_length = 79

[tool.flake8]
max-complexity = 15
max-line-length = 79
extend-ignore = "E203"

[tool.isort]
line_length = 79
include_trailing_comma = true
force_single_line = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
