[tool.poetry]
name = "fastapi-oidc-auth"
version = "0.1.0"
description = "OIDC auth in fastapi using a decorator."
authors = ["Matthias Osswald <m@osswald.li>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/busykoala/fastapi-oidc-auth"
keywords = ["fastapi", "oidc", "authentication"]

[tool.poetry.dependencies]
python = ">= 3.9, < 4.0"
fastapi = "^0.115.8"
PyJWT = {extras = ["crypto"], version = "^2.8"}
requests = "^2.32"
uvicorn = "^0.34"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
